// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PhoneNumbers /> do not render 'Add' button when UIFeature is false 1`] = `
<div>
  <div
    class="mx_GeneralUserSettingsTab_section--discovery_existing"
  >
    <span
      class="mx_GeneralUserSettingsTab_section--discovery_existing_address"
    >
      +
      123123123
    </span>
    <div
      class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_danger_sm"
      role="button"
      tabindex="0"
    >
      Remove
    </div>
  </div>
  <form
    autocomplete="off"
    class="mx_PhoneNumbers_new"
    novalidate=""
  >
    <div
      class="mx_PhoneNumbers_input"
    >
      <div
        class="mx_Field mx_Field_input mx_Field_labelAlwaysTopLeft"
      >
        <span
          class="mx_Field_prefix"
        >
          <div
            class="mx_Dropdown mx_PhoneNumbers_country mx_CountryDropdown"
          >
            <div
              aria-describedby="mx_CountryDropdown_value"
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-label="Country Dropdown"
              aria-owns="mx_CountryDropdown_input"
              class="mx_AccessibleButton mx_Dropdown_input mx_no_textinput"
              role="button"
              tabindex="0"
            >
              <div
                class="mx_Dropdown_option"
                id="mx_CountryDropdown_value"
              >
                <span
                  class="mx_CountryDropdown_shortOption"
                >
                  <div
                    class="mx_Dropdown_option_emoji"
                  >
                    🇬🇧
                  </div>
                  +44
                </span>
              </div>
              <span
                class="mx_Dropdown_arrow"
              />
            </div>
          </div>
        </span>
        <input
          autocomplete="tel-national"
          id="mx_Field_5"
          label="Phone Number"
          placeholder="Phone Number"
          type="text"
          value=""
        />
        <label
          for="mx_Field_5"
        >
          Phone Number
        </label>
      </div>
    </div>
  </form>
</div>
`;

exports[`<PhoneNumbers /> do not render 'remove' button when option UIFeature is false 1`] = `
<div>
  <div
    class="mx_GeneralUserSettingsTab_section--discovery_existing"
  >
    <span
      class="mx_GeneralUserSettingsTab_section--discovery_existing_address"
    >
      +
      123123123
    </span>
  </div>
  <form
    autocomplete="off"
    class="mx_PhoneNumbers_new"
    novalidate=""
  >
    <div
      class="mx_PhoneNumbers_input"
    >
      <div
        class="mx_Field mx_Field_input mx_Field_labelAlwaysTopLeft"
      >
        <span
          class="mx_Field_prefix"
        >
          <div
            class="mx_Dropdown mx_PhoneNumbers_country mx_CountryDropdown"
          >
            <div
              aria-describedby="mx_CountryDropdown_value"
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-label="Country Dropdown"
              aria-owns="mx_CountryDropdown_input"
              class="mx_AccessibleButton mx_Dropdown_input mx_no_textinput"
              role="button"
              tabindex="0"
            >
              <div
                class="mx_Dropdown_option"
                id="mx_CountryDropdown_value"
              >
                <span
                  class="mx_CountryDropdown_shortOption"
                >
                  <div
                    class="mx_Dropdown_option_emoji"
                  >
                    🇬🇧
                  </div>
                  +44
                </span>
              </div>
              <span
                class="mx_Dropdown_arrow"
              />
            </div>
          </div>
        </span>
        <input
          autocomplete="tel-national"
          id="mx_Field_3"
          label="Phone Number"
          placeholder="Phone Number"
          type="text"
          value=""
        />
        <label
          for="mx_Field_3"
        >
          Phone Number
        </label>
      </div>
    </div>
  </form>
  <div
    class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary"
    role="button"
    tabindex="0"
  >
    Add
  </div>
</div>
`;

exports[`<PhoneNumbers /> render 'Add' button when UIFeature is true 1`] = `
<div>
  <div
    class="mx_GeneralUserSettingsTab_section--discovery_existing"
  >
    <span
      class="mx_GeneralUserSettingsTab_section--discovery_existing_address"
    >
      +
      123123123
    </span>
    <div
      class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_danger_sm"
      role="button"
      tabindex="0"
    >
      Remove
    </div>
  </div>
  <form
    autocomplete="off"
    class="mx_PhoneNumbers_new"
    novalidate=""
  >
    <div
      class="mx_PhoneNumbers_input"
    >
      <div
        class="mx_Field mx_Field_input mx_Field_labelAlwaysTopLeft"
      >
        <span
          class="mx_Field_prefix"
        >
          <div
            class="mx_Dropdown mx_PhoneNumbers_country mx_CountryDropdown"
          >
            <div
              aria-describedby="mx_CountryDropdown_value"
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-label="Country Dropdown"
              aria-owns="mx_CountryDropdown_input"
              class="mx_AccessibleButton mx_Dropdown_input mx_no_textinput"
              role="button"
              tabindex="0"
            >
              <div
                class="mx_Dropdown_option"
                id="mx_CountryDropdown_value"
              >
                <span
                  class="mx_CountryDropdown_shortOption"
                >
                  <div
                    class="mx_Dropdown_option_emoji"
                  >
                    🇬🇧
                  </div>
                  +44
                </span>
              </div>
              <span
                class="mx_Dropdown_arrow"
              />
            </div>
          </div>
        </span>
        <input
          autocomplete="tel-national"
          id="mx_Field_6"
          label="Phone Number"
          placeholder="Phone Number"
          type="text"
          value=""
        />
        <label
          for="mx_Field_6"
        >
          Phone Number
        </label>
      </div>
    </div>
  </form>
  <div
    class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary"
    role="button"
    tabindex="0"
  >
    Add
  </div>
</div>
`;

exports[`<PhoneNumbers /> render 'remove' button when UIFeature is true and an existing phonenumbers exists 1`] = `
<div>
  <div
    class="mx_GeneralUserSettingsTab_section--discovery_existing"
  >
    <span
      class="mx_GeneralUserSettingsTab_section--discovery_existing_address"
    >
      +
      123123123
    </span>
    <div
      class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_danger_sm"
      role="button"
      tabindex="0"
    >
      Remove
    </div>
  </div>
  <form
    autocomplete="off"
    class="mx_PhoneNumbers_new"
    novalidate=""
  >
    <div
      class="mx_PhoneNumbers_input"
    >
      <div
        class="mx_Field mx_Field_input mx_Field_labelAlwaysTopLeft"
      >
        <span
          class="mx_Field_prefix"
        >
          <div
            class="mx_Dropdown mx_PhoneNumbers_country mx_CountryDropdown"
          >
            <div
              aria-describedby="mx_CountryDropdown_value"
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-label="Country Dropdown"
              aria-owns="mx_CountryDropdown_input"
              class="mx_AccessibleButton mx_Dropdown_input mx_no_textinput"
              role="button"
              tabindex="0"
            >
              <div
                class="mx_Dropdown_option"
                id="mx_CountryDropdown_value"
              >
                <span
                  class="mx_CountryDropdown_shortOption"
                >
                  <div
                    class="mx_Dropdown_option_emoji"
                  >
                    🇬🇧
                  </div>
                  +44
                </span>
              </div>
              <span
                class="mx_Dropdown_arrow"
              />
            </div>
          </div>
        </span>
        <input
          autocomplete="tel-national"
          id="mx_Field_4"
          label="Phone Number"
          placeholder="Phone Number"
          type="text"
          value=""
        />
        <label
          for="mx_Field_4"
        >
          Phone Number
        </label>
      </div>
    </div>
  </form>
  <div
    class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary"
    role="button"
    tabindex="0"
  >
    Add
  </div>
</div>
`;

exports[`<PhoneNumbers /> should allow a phone number to be added 1`] = `
<DocumentFragment>
  <form
    autocomplete="off"
    class="mx_PhoneNumbers_new"
    novalidate=""
  >
    <div
      class="mx_PhoneNumbers_input"
    >
      <div
        class="mx_Field mx_Field_input mx_Field_labelAlwaysTopLeft"
      >
        <span
          class="mx_Field_prefix"
        >
          <div
            class="mx_Dropdown mx_PhoneNumbers_country mx_CountryDropdown mx_Dropdown_disabled"
          >
            <div
              aria-describedby="mx_CountryDropdown_value"
              aria-disabled="true"
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-label="Country Dropdown"
              aria-owns="mx_CountryDropdown_input"
              class="mx_AccessibleButton mx_Dropdown_input mx_no_textinput mx_AccessibleButton_disabled"
              disabled=""
              role="button"
              tabindex="0"
            >
              <div
                class="mx_Dropdown_option"
                id="mx_CountryDropdown_value"
              >
                <span
                  class="mx_CountryDropdown_shortOption"
                >
                  <div
                    class="mx_Dropdown_option_emoji"
                  >
                    🇬🇧
                  </div>
                  +44
                </span>
              </div>
              <span
                class="mx_Dropdown_arrow"
              />
            </div>
          </div>
        </span>
        <input
          autocomplete="tel-national"
          disabled=""
          id="mx_Field_1"
          label="Phone Number"
          placeholder="Phone Number"
          type="text"
          value="7900111222"
        />
        <label
          for="mx_Field_1"
        >
          Phone Number
        </label>
      </div>
    </div>
  </form>
  <div>
    <div>
      A text message has been sent to +447900111222. Please enter the verification code it contains.
      <br />
    </div>
    <form
      autocomplete="off"
      novalidate=""
    >
      <div
        class="mx_Field mx_Field_input"
      >
        <input
          autocomplete="off"
          id="mx_Field_2"
          label="Verification code"
          placeholder="Verification code"
          type="text"
          value=""
        />
        <label
          for="mx_Field_2"
        >
          Verification code
        </label>
      </div>
      <div
        aria-disabled="true"
        class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary mx_AccessibleButton_disabled"
        disabled=""
        role="button"
        tabindex="0"
      >
        Continue
      </div>
    </form>
  </div>
</DocumentFragment>
`;
